src/component/gauge/snapshots/envision__component__gauge__tests__view_full_gauge_with_title.snap
---
source: src/component/gauge/tests.rs
expression: terminal.backend().to_string()
---
┌CPU Usage─────────────────────────────┐
│█████████████████████████████         │
│█████████████████75% ████████         │
│█████████████████████████████         │
└──────────────────────────────────────┘
