src/component/gauge/snapshots/envision__component__gauge__tests__view_full_gauge_with_units.snap
---
source: src/component/gauge/tests.rs
expression: terminal.backend().to_string()
---
┌Memory────────────────────────────────┐
│███████████████████                   │
│██████████512.0 / 1024.0 MB           │
│███████████████████                   │
└──────────────────────────────────────┘
