src/component/gauge/snapshots/envision__component__gauge__tests__view_green_zone.snap
---
source: src/component/gauge/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│███████████                           │
│███████████      30%                  │
│███████████                           │
└──────────────────────────────────────┘
